# QT_Sorting_Demo

./: CMakeLists.txt  README.md  bubble_sort.cpp  bubble_sort.h  heap_sort.cpp  heap_sort.h  insertion_sort.cpp  insertion_sort.h  merge_sort.cpp  merge_sort.h  quick_sort.cpp  quick_sort.h  selection_sort.cpp  selection_sort.h  sorting_algo.cpp  sorting_algo.h  widget.cpp  widget.h
